--- a/main.html
+++ b/main.html
@@ -4,10 +4,60 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table class="table table-bordered">
+		<tr>
+			<th>Feild</th>
+			<th>ID</th>
+			<th>Type</th>
+			<th>Placeholder</th>
+			<th>Other Details</th>
+		</tr>
+		<tr>
+			<td>Name</td>
+			<td>name</td>
+			<td>text</td>
+			<td>Name</td>
+		</tr>
+		<tr>
+			<td>Phone Number</td>
+			<td>phone</td>
+			<td>text</td>
+			<td>Phone Number</td>
+		</tr>
+		<tr>
+			<td>Address</td>
+			<td>address</td>
+			<td>text</td>
+			<td>Address</td>
+		</tr>
+		<tr>
+			<td>Have you ever lived with a Dog before?</td>
+			<td>checkbox</td>
+			<td>checkbox</td>
+			<td></td>
+			<td>Value should be: "Have you ever lived with a Dog before?</td>
+		</tr>
+		<tr>
+			<td>Please select your preferred breeds</td>
+			<td>multiSelect</td>
+			<td>select</td>
+			<td></td>
+			<td>Make this as a multi-select box with at least 3 options</td>
+		</tr>
+		<tr>
+			<td>Submit</td>
+			<td>submit</td>
+			<td>submit</td>
+			<td></td>
+			<td>Value should be: "Submit"</td>
+		</tr>
+    </table>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
