--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
 	<table class="table table-bordered">
 		<tr>
 			<th>Feild</th>
@@ -57,6 +58,7 @@
 			<td>Value should be: "Submit"</td>
 		</tr>
     </table>
+	</form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
