--- a/main.html
+++ b/main.html
@@ -11,52 +11,21 @@
 	<!-- the entire body must be written by student -->
 	<form>
 	<table class="table table-bordered">
-		<tr>
-			<th>Feild</th>
-			<th>ID</th>
-			<th>Type</th>
-			<th>Placeholder</th>
-			<th>Other Details</th>
-		</tr>
-		<tr>
-			<td>Name</td>
-			<td>name</td>
-			<td>text</td>
-			<td>Name</td>
-		</tr>
-		<tr>
-			<td>Phone Number</td>
-			<td>phone</td>
-			<td>text</td>
-			<td>Phone Number</td>
-		</tr>
-		<tr>
-			<td>Address</td>
-			<td>address</td>
-			<td>text</td>
-			<td>Address</td>
-		</tr>
-		<tr>
-			<td>Have you ever lived with a Dog before?</td>
-			<td>checkbox</td>
-			<td>checkbox</td>
-			<td></td>
-			<td>Value should be: "Have you ever lived with a Dog before?</td>
-		</tr>
-		<tr>
-			<td>Please select your preferred breeds</td>
-			<td>multiSelect</td>
-			<td>select</td>
-			<td></td>
-			<td>Make this as a multi-select box with at least 3 options</td>
-		</tr>
-		<tr>
-			<td>Submit</td>
-			<td>submit</td>
-			<td>submit</td>
-			<td></td>
-			<td>Value should be: "Submit"</td>
-		</tr>
+		Name <input placeholder="Name" id="name" type="text" ></input>
+		<br>
+		Phone Number <input placeholder="Phone Number" id="phone" type="text" ></input>
+		<br>
+		Address <input placeholder="Address" id="address" type="text" ></input>
+       <br>
+		Have you ever lived with a Dog before?<input type="checkbox" id="checkbox"></input>
+		<br>
+		Please select your preffered breeds <select >
+			<option>german shepherd</option>
+			<option>Labrador</option>
+			<option>bully</option>
+		</select>
+		<br>
+		<input type="submit" id="submit" value="Submit">
     </table>
 	</form>
 	
