--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 		<br>
 		Address <input placeholder="Address" id="address" type="text" ></input>
        <br>
-		Have you ever lived with a Dog before?<input type="checkbox" id="checkbox"></input>
+		Have you ever lived with a Dog before?<input value="Have you ever lived with a Dog before?" type="checkbox" id="checkbox"></input>
 		<br>
-		Please select your preffered breeds <select >
+		Please select your preffered breeds <select id="multiSelect">
 			<option>german shepherd</option>
 			<option>Labrador</option>
 			<option>bully</option>
